fixed css bug when table is overflowing its border

--- a/day10/holdShiftToMultipleCheckboxes.css
+++ b/day10/holdShiftToMultipleCheckboxes.css
@@ -9,7 +9,7 @@ body {
   background-color: mistyrose;
 }
 table {
-  max-width: 50vw;
+  max-width: 50%;
   background-color: var(--niceAndYellow);
   box-shadow: 10px 10px var(--niceAndYellowButDarker);
 }
